[FIX] Add ddl-auto In Template

--- a/src/main/resources/application-template.yml
+++ b/src/main/resources/application-template.yml
@@ -2,6 +2,10 @@ spring:
   application:
     name: milkyway
 
+  jpa:
+    hibernate:
+      ddl-auto: validate
+
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://{db address}:{db port}/{database name}
