--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
+	// spring security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	// jpa
+	implementation 'com.auth0:java-jwt:4.5.0'
+
 	// database
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
